	  StrStore() replaced with strsto(), removed as/link/lkstore.c
	* as/link/lkgb.c, as/link/lkgg.c, as/link/z80/lkgb.c,
	  as/link/z80/lkgg.c, as/link/z80/Makefile.in,
	  as/link/z80/linkz80.dsp, as/link/z80/linkgbz80.dsp,
	  as/link/mcs51/Makefile.in, as/link/mcs51/aslink.dsp,
	  as/link/hc08/Makefile.in, as/link/hc08/link_hc08.dsp:
	  as/link/z80/lkgb.c and as/link/z80/lkgg.c moved to as/link

2009-12-12 Borut Razem <borut.razem AT siol.net>

	* as/link/z80/lkmain.c: removed
	* as/link/z80/linkgbz80.dsp, as/link/z80/linkz80.dsp,
	  as/link/z80/Makefile.in: use as/link/lkmain.c
	* as/link/lkmain.c: fixed command line option handling
	* src/port.h, src/SDCCmain.c, src/z80/main.c:
	  fixed crt object file handling with asld, ...
	* sdcc/as/link/lkdata.c, sdcc/as/link/mcs51/lkarea.c,
	  sdcc/as/link/aslink.h, sdcc/as/link/hc08/Makefile.in,
	  sdcc/as/link/mcs51/Makefile.in, sdcc/as/link/z80/Makefile.in,
	  sdcc/as/link/z80/linkz80.dsp, sdcc/as/link/z80/linkgbz80.dsp,
	  sdcc/as/link/mcs51/aslink.dsp, sdcc/as/link/hc08/link_hc08.dsp:
	  modified
	  sdcc/as/link/z80/lks19.c, sdcc/as/link/z80/lkmem.c,
	  sdcc/as/link/mcs51/lks19.c, sdcc/as/link/mcs51/lkmem.c,
	  sdcc/as/link/hc08/lks19.c, sdcc/as/link/hc08/lkmem.c,
	  sdcc/as/link/hc08/lkelf.c: moved to sdcc/as/link
	  unification of lkelf.c, lks19.c and lkmem.c

2009-12-10 Jesus Calvino-Fraga <jesusc AT ece.ubc.ca>

	* all.dsp, as/link/hc08/link_hc08.dsp, as/link/mcs51/aslink.dsp:
	 renamed linker executables.

2009-12-04 Borut Razem <borut.razem AT siol.net>

	* support/scripts/sdcc.nsi: renamed liker executables
	* as/link/mcs51/Makefile.in, as/link/hc08/Makefile.in:
	  fixed installation linker executable name

2009-12-03 Borut Razem <borut.razem AT siol.net>

	* sdcc/device/lib/z80/Makefile.in, sdcc/device/lib/gbz80/Makefile.in,
	  sdcc/device/lib/ds390/Makefile.in, sdcc/device/lib/Makefile.in,
	  sdcc/device/lib/ds400/Makefile.in, sdcc/device/lib/mcs51/Makefile.in,
	  sdcc/device/lib/hc08/Makefile.in: