@@ -8,6 +8,8 @@
 	  as/link/mcs51/Makefile.in, as/link/mcs51/aslink.dsp,
 	  as/link/hc08/Makefile.in, as/link/hc08/link_hc08.dsp:
 	  as/link/z80/lkgb.c and as/link/z80/lkgg.c moved to as/link
+	* as/link/lkelf.c: added casts to new()
+	* as/link/lkmem.c: fixed code asld6808 crash
 
 2009-12-12 Borut Razem <borut.razem AT siol.net>
 
